[project]
name = "webhook-handler"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Oreoluwa",email = "awuloero13@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "redis (>=6.4.0,<7.0.0)",
    "fakeredis (>=2.31.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

